force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner__c</fullName>
    <label>Vehicle Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Driver_License__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>