force-app/main/default/objects/Vehicle__c/recordTypes/Motorbike.recordType-meta.xml
<RecordType>
    <fullName>Motorbike</fullName>
    <active>true</active>
    <label>Motorbike</label>
</RecordType>