force-app/main/default/objects/Vehicle__c/validationRules/Discount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Rule</fullName>
    <active>true</active>
    <description>Setting Discount more than 20% is forbidden</description>
    <errorConditionFormula>Discount__c &gt;0.2</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Setting Discount more than 20% is forbidden</errorMessage>
</ValidationRule>